unpackaged/main/default/objects/ETT_GRN__c/ETT_GRN__c.object-meta.xml
<CustomObject>
    <label>GRN</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GRN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>