unpackaged/main/default/objects/ETT_GRN__c/fields/ETT_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Receipt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>