unpackaged/main/default/objects/ETT_GRN__c/fields/ETT_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Receipt_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>