unpackaged/main/default/objects/ETT_GRN__c/listViews/All_Tyre.listView-meta.xml
<ListView>
    <fullName>All_Tyre</fullName>
    <columns>NAME</columns>
    <columns>ETT_Account__c</columns>
    <columns>ETT_Delivery_Location__c</columns>
    <columns>ETT_Invoice_Number__c</columns>
    <columns>ETT_PO_Date__c</columns>
    <columns>ETT_Receipt_Date__c</columns>
    <columns>ETT_Receipt_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tyre</label>
</ListView>